# PyErrorSchema

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  example.py  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_release.yml  pytest_only.yml  run-tests.yml  test_release.yaml
docs/: README.md  installation.md
examples/: example.py
innodisk_error_schema/: __init__.py  base_error_schema.py  error_schema.py  fastapi_error_schema.py
pyerrorschema/: __init__.py  base_error_schema.py  err_base.py  err_group.py  error_schema_group.py  fastapi_error_schema.py  types.py  version.py
pyerrorschema/base/: __init__.py  err_base.py  err_group.py
pyerrorschema/fastapi/: __init__.py  fastapi_base.py  fastapi_error_schema.py  fastapi_group.py  location.py
pyerrorschema/mappings/: __init__.py  exceptions.py  mapper.py
pyerrorschema/utils/: __init__.py  class_utils.py  decorators.py
pyschemavalidator/: __init__.py  base_error_schema.py
requirements/: build.txt  dev.txt
tests/: conftest.py  test_base_error_schema.py  test_fastapi_error_schema.py
tests/base/: test_error_group.py  test_error_schema.py
tests/fastapi/: test_fastapi_error_group.py  test_fastapi_error_schema.py
tests/mappings/: test_exception_mapper.py
tests/utils/: test_decorators.py
