[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyerrorschema"
version = "1.0.0"
license = {file = "LICENSE.txt"}
description = "Error schema validator"
authors = [{name = "Elliot Su", email = "sodinfeliz@google.com"}]
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
    'License :: OSI Approved :: BSD License',
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3 :: Only',
    "Operating System :: OS Independent",
    "Framework :: Pydantic :: 2",
]
dependencies = [
    "pydantic>=2.6.4"
]

[project.urls]
source = "https://github.com/sodinfeliz/PyErrorSchema"

[tool.pytest.ini_options]
addopts = "--cov=pyerrorschema"
testpaths = [
    "tests"
]
minversion = "6.0"

[tool.isort]
profile = "black"
