[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyerrorschema"
version = "2.0.0rc2"
license = {file = "LICENSE.txt"}
description = "Structured error handling framework for Python"
authors = [{name = "Elliot Su", email = "sodinfeliz@google.com"}]
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
    'License :: OSI Approved :: BSD License',
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3 :: Only',
    "Operating System :: OS Independent",
    "Framework :: Pydantic :: 2",
]
dependencies = [
    "pydantic>=2.6.4,<3.0.0"
]

[project.urls]
source = "https://github.com/sodinfeliz/PyErrorSchema"

[tool.pytest.ini_options]
addopts = "--cov=pyerrorschema"
testpaths = [
    "tests"
]
minversion = "6.0"

[tool.mypy]
exclude = [
    "venv/",
    "tests/"
]

[tool.ruff]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

ignore = [
    "E501",  # line too long, handled by black
    "E701",  # multiple statements on one line
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "C408",  # rewrite as a literal
]

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]
